--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "laravel/ui": "^2.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "spatie/commonmark-highlighter": "^2.1",
+        "spatie/laravel-backup": "^6.10",
         "spatie/laravel-demo-mode": "^2.6",
         "spatie/laravel-flash": "^1.5",
         "spatie/laravel-honeypot": "^1.5",
