--- a/composer.json
+++ b/composer.json
@@ -18,34 +18,35 @@
         "ext-json": "*",
         "ext-openssl": "*",
         "ext-zip": "*",
-        "aws/aws-sdk-php": "^3.128",
+        "aws/aws-sdk-php": "^3.152",
         "blade-ui-kit/blade-ui-kit": "^0.1.1",
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.3.6",
         "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
+        "fruitcake/laravel-cors": "^2.0",
         "fzaninotto/faker": "^1.4",
-        "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^7.0",
-        "laravel/socialite": "^4.3",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/framework": "^8.0",
+        "laravel/socialite": "^5.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
+        "laravel/ui": "^2.2",
         "league/flysystem-aws-s3-v3": "^1.0",
         "spatie/commonmark-highlighter": "^2.1",
-        "spatie/laravel-backup": "^6.10",
-        "spatie/laravel-flash": "^1.5",
-        "spatie/laravel-honeypot": "^1.5",
+        "spatie/laravel-backup": "^6.11",
+        "spatie/laravel-flash": "^1.7",
+        "spatie/laravel-honeypot": "dev-master",
         "spatie/laravel-log-dumper": "^1.1",
         "spatie/laravel-menu": "^3.5",
         "spatie/laravel-tail": "^4.2",
         "spatie/yaml-front-matter": "^2.0",
-        "wildbit/swiftmailer-postmark": "^3.1"
+        "wildbit/swiftmailer-postmark": "^3.2"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.6.7",
+        "barryvdh/laravel-ide-helper": "^2.8",
         "friendsofphp/php-cs-fixer": "^2.16",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.3",
+        "fzaninotto/faker": "^1.9.1"
     },
     "config": {
         "optimize-autoloader": true,
