--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "spatie/laravel-log-dumper": "^1.1",
         "spatie/laravel-menu": "^3.5",
         "spatie/laravel-tail": "^4.2",
+        "spatie/test-time": "^1.2",
         "spatie/yaml-front-matter": "^2.0",
         "wildbit/swiftmailer-postmark": "^3.2"
     },
