--- a/.env.example
+++ b/.env.example
@@ -56,8 +56,4 @@ GITHUB_REDIRECT_URI=
 
 MAILCOACH_SUBSCRIPTION_UUID=
 
-PADDLE_COUPON_CODE=COUPON-SPECIMEN
-PADDLE_COUPON_PERCENTAGE=20
-PADDLE_COUPON_VALID_FROM="2020-10-01 00:00"
-PADDLE_COUPON_EXPIRES_AT="2020-12-25 00:00"
-PADDLE_COUPON_LABEL="Launch offer"
+PURCHASABLE_ID=1
