--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "fzaninotto/faker": "^1.4",
-        "guzzlehttp/guzzle": "^6.5",
+        "guzzlehttp/guzzle": "^6.5|^7.0",
         "laravel/framework": "^8.0",
         "laravel/socialite": "^5.0",
         "laravel/tinker": "^2.0",
@@ -37,6 +37,7 @@
         "spatie/laravel-log-dumper": "^1.1",
         "spatie/laravel-menu": "^3.5",
         "spatie/laravel-tail": "^4.2",
+        "spatie/spatie-price-api": "^1.0",
         "spatie/test-time": "^1.2",
         "spatie/yaml-front-matter": "^2.0",
         "wildbit/swiftmailer-postmark": "^3.2"
