--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "ext-json": "*",
         "ext-openssl": "*",
         "ext-zip": "*",
@@ -33,7 +33,7 @@
         "spatie/commonmark-highlighter": "^2.1",
         "spatie/laravel-backup": "^6.11",
         "spatie/laravel-flash": "^1.7",
-        "spatie/laravel-honeypot": "dev-master",
+        "spatie/laravel-honeypot": "^3.0.0",
         "spatie/laravel-log-dumper": "^1.1",
         "spatie/laravel-menu": "^3.5",
         "spatie/laravel-tail": "^4.2",
@@ -53,7 +53,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "7.4"
+        }
     },
     "extra": {
         "laravel": {
