--- a/composer.json
+++ b/composer.json
@@ -45,10 +45,11 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
         "friendsofphp/php-cs-fixer": "^2.16",
+        "fzaninotto/faker": "^1.9.1",
+        "laravel/envoy": "^2.7",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3",
-        "fzaninotto/faker": "^1.9.1"
+        "phpunit/phpunit": "^9.3"
     },
     "config": {
         "optimize-autoloader": true,
